@@ -8,7 +8,9 @@ versions. Released on @RELEASE_DATE@.
 CHANGES
 
  * SentenceReader; refactored to better support diffrent data sources, including
-   some performance tweaks (should take less CPU now).
+   some performance tweaks (should take less CPU now). When dispatching events,
+   all exceptions thrown by SentenceListeners are now logged using the default
+   java.util.logging.Logger on level WARNING.
 
  * SentenceValidator; performance tweaks in regular expressions. Sentence length
    is no longer strictly checked, sentence IDs may contain now 3-10 chars.
